[package]
name = "bevy_check"
version = "0.1.0"
edition = "2021"

[dependencies]
# The core metadata parser
cargo_metadata = "0.18" 
# For parsing your rules and reports
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For the CLI interface
clap = { version = "4.4", features = ["derive"] }
# For walking the file system in scanner.rs
walkdir = "2.4"
# For colorized console output in reporter.rs
colored = "2.0"